# fermatter

./: .gitignore  README.md  cloudbuild.yaml  demo_app.tsx  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/src/fermatter/: __init__.py  api.py  main.py
backend/src/fermatter/core/: __init__.py  config.py  logging.py
backend/src/fermatter/models/: __init__.py  schemas.py
backend/src/fermatter/services/: __init__.py  analyzer.py  openai_client.py  sources_library.py
backend/src/fermatter/utils/: __init__.py  health.py
backend/tests/: test_health.py
frontend/: .env.example  Dockerfile  Dockerfile.prod  index.html  nginx.conf  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/components/: ConnectorOverlay.tsx  Editor.tsx  FeedbackPanel.tsx  InstabilityMap.tsx  ModeSelector.tsx  ParagraphHighlighter.tsx  SettingsDialog.tsx  SourcesPanel.tsx
frontend/src/components/landing/: BlackBoxVsRailsViz.tsx  CompetitorMatrix.tsx  DeckNav.tsx  FermatMarginViz.tsx  OpenCoreStack.tsx  PitchDeck.tsx  PitchSlide.tsx  TeamCards.tsx
frontend/src/components/ui/: accordion.tsx  badge.tsx  dialog.tsx  popover.tsx  scroll-area.tsx
frontend/src/lib/: api.ts  auth.tsx  documents.ts  firebase.ts  sources.ts  types.ts
frontend/src/pages/: DashboardPage.tsx  DocumentsPage.tsx  EditorPage.tsx  LandingPage.tsx  LibraryPage.tsx
frontend/src/styles/: globals.css
